Colab을 통해 생성됨

--- a/7_examine_data.ipynb
+++ b/7_examine_data.ipynb
@@ -46,7 +46,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "9TpypoOPM33x",
-        "outputId": "03de367d-1347-4633-c7cc-5e192c837038"
+        "outputId": "d77bf39a-34f8-4d4e-ecbf-cab05f94dd03"
       },
       "execution_count": null,
       "outputs": [
@@ -55,12 +55,12 @@
           "name": "stdout",
           "text": [
             "Cloning into 'Pandas_Stats_Data_Analysis_2025'...\n",
-            "remote: Enumerating objects: 387, done.\u001b[K\n",
-            "remote: Counting objects: 100% (247/247), done.\u001b[K\n",
-            "remote: Compressing objects: 100% (192/192), done.\u001b[K\n",
-            "remote: Total 387 (delta 126), reused 110 (delta 53), pack-reused 140 (from 1)\u001b[K\n",
-            "Receiving objects: 100% (387/387), 3.26 MiB | 16.35 MiB/s, done.\n",
-            "Resolving deltas: 100% (209/209), done.\n"
+            "remote: Enumerating objects: 393, done.\u001b[K\n",
+            "remote: Counting objects: 100% (90/90), done.\u001b[K\n",
+            "remote: Compressing objects: 100% (25/25), done.\u001b[K\n",
+            "remote: Total 393 (delta 85), reused 65 (delta 65), pack-reused 303 (from 1)\u001b[K\n",
+            "Receiving objects: 100% (393/393), 3.52 MiB | 14.20 MiB/s, done.\n",
+            "Resolving deltas: 100% (219/219), done.\n"
           ]
         }
       ]
@@ -83,19 +83,6 @@
       "metadata": {
         "id": "laF0M7SpLCfz"
       }
-    },
-    {
-      "cell_type": "code",
-      "source": [
-        "import pandas as pd\n",
-        "df=pd.read_csv(\"/content/Pandas_Stats_Data_Analysis_2025/auto-mpg.csv\")\n",
-        "df.colums=['mpg','cylinders','displacement,'horsepoweer'']"
-      ],
-      "metadata": {
-        "id": "FCRaxVaWjfcS"
-      },
-      "execution_count": null,
-      "outputs": []
     },
     {
       "cell_type": "code",
@@ -145,7 +132,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "pq2pkeHvTJfD",
-        "outputId": "6bfb3313-febb-4a9e-b5c5-cc4b0438f481"
+        "outputId": "f8a6d36f-67d6-4820-b0a0-ca62f80b3a0f"
       },
       "execution_count": null,
       "outputs": [
@@ -294,7 +281,7 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "40a195d2-d284-4c95-eaba-1a49758d572b"
+        "outputId": "17cb9202-6c7a-479c-8845-1d589d3e93b9"
       },
       "outputs": [
         {
@@ -367,6 +354,17 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd"
+      ],
+      "metadata": {
+        "id": "35iX2fdTaFAl"
+      },
+      "execution_count": null,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "import pandas as pd\n",
         "\n",
         "url = \"/content/Pandas_Stats_Data_Analysis_2025/sample.html\"\n",
@@ -396,7 +394,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "jPxRRr_iTs_P",
-        "outputId": "a7c6ce34-87b8-4edd-b379-f68d2c325883"
+        "outputId": "afe4e2af-abf1-427f-de05-f940b34f9bb2"
       },
       "execution_count": null,
       "outputs": [
@@ -451,6 +449,42 @@
     {
       "cell_type": "code",
       "source": [
+        "import pandas as pd\n",
+        "data={'name':['Emma','Sean','Witney'],\n",
+        "      'algol':['A','A+','B'],\n",
+        "      'basic':['C','B','B+'],\n",
+        "      'C++':['B+','C','C+']}\n",
+        "df=pd.DataFrame(data)\n",
+        "df.set_index('name',inplace=True)\n",
+        "print(df)\n",
+        "\n",
+        "df.to_csv(\"./df_sample.csv\")"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "E4Bdb8xOaeyV",
+        "outputId": "ff13fcd0-6d71-4c31-95aa-c2c13f64de61"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "       algol basic C++\n",
+            "name                  \n",
+            "Emma       A     C  B+\n",
+            "Sean      A+     B   C\n",
+            "Witney     B    B+  C+\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         "#saving as csv format\n",
         "\n",
         "import pandas as pd\n",
@@ -472,7 +506,7 @@
       ],
       "metadata": {
         "id": "R6pfp3sQ3Ns-",
-        "outputId": "3587c842-dcfc-4fff-80f3-9caae75563db",
+        "outputId": "c633b5b2-2420-47c9-b665-c6b490ded5b8",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -522,7 +556,7 @@
       ],
       "metadata": {
         "id": "Fr21vPH_HtSS",
-        "outputId": "a18bc35d-9d0e-428f-9be8-b0a1acc5c838",
+        "outputId": "ef3732cb-f2dd-47f5-b235-7e546e67a823",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
@@ -550,6 +584,69 @@
       "metadata": {
         "id": "o57zV9qiKspG"
       }
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "\n",
+        "import pandas as pd\n",
+        "\n",
+        "data1 = {'name': ['Emily', 'Andy', 'John'],\n",
+        "        'c++':['A', 'A+', 'B'],\n",
+        "        'basic': ['C', 'B', 'B+'],\n",
+        "        'JAVA': ['B+', 'C', 'C+']\n",
+        "        }\n",
+        "\n",
+        "data2 = {'c0':[1,2,3],\n",
+        "         'c1':[4,5,6],\n",
+        "         'c2':[7,8,9],\n",
+        "         'c3':[10,11,12],\n",
+        "         'c4':[13,14,15]\n",
+        "         }\n",
+        "\n",
+        "df1=pd.DataFrame(data1)\n",
+        "df1.set_index('name', inplace=True)\n",
+        "print(df1)\n",
+        "print('\\n')\n",
+        "\n",
+        "df2=pd.DataFrame(data2)\n",
+        "df2.set_index('c0', inplace=True)\n",
+        "print(df2)\n",
+        "\n",
+        "writer=pd.ExcelWriter(\"./df_excelwriter.xlsx\")\n",
+        "\n",
+        "df1.to_excel(writer, sheet_name='grading')\n",
+        "df2.to_excel(writer, sheet_name='numbers')\n",
+        "writer.close()"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "lVAeQFV-cySV",
+        "outputId": "025ed8b2-e466-4980-a412-153ffa77ccbd"
+      },
+      "execution_count": null,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "      c++ basic JAVA\n",
+            "name                \n",
+            "Emily   A     C   B+\n",
+            "Andy   A+     B    C\n",
+            "John    B    B+   C+\n",
+            "\n",
+            "\n",
+            "    c1  c2  c3  c4\n",
+            "c0                \n",
+            "1    4   7  10  13\n",
+            "2    5   8  11  14\n",
+            "3    6   9  12  15\n"
+          ]
+        }
+      ]
     },
     {
       "cell_type": "code",
@@ -590,7 +687,7 @@
       ],
       "metadata": {
         "id": "EY3A1qAuK106",
-        "outputId": "10ccee04-097c-4d57-e6d8-0d14bff232c2",
+        "outputId": "51412fd8-bc2d-4ed1-a9b6-020d5c5049a5",
         "colab": {
           "base_uri": "https://localhost:8080/"
         }
