Colab을 통해 생성됨

--- a/20202123_leewoojin.ipynb
+++ b/20202123_leewoojin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOJrPiO0dDe1Y6ZyQ97GVKv",
+      "authorship_tag": "ABX9TyNPc8syyOOzVYjsaBv6Vcpd",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -34,68 +34,68 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KakjZjrCR3wz",
-        "outputId": "5d76614d-91fb-4e17-bb80-11a6944a6035"
+        "outputId": "c201d096-95b0-4012-bc67-cc6dcc27b6ae"
       },
       "outputs": [
         {
           "output_type": "stream",
           "name": "stdout",
           "text": [
-            "[3.94727651 5.43958326 5.06240643 6.13926446 4.48512938 5.94824833\n",
-            " 4.86014651 5.73299124 5.5689727  6.75710347 3.93876656 5.13593462\n",
-            " 5.65665556 5.41349647 6.1387645  4.14020967 6.71651201 5.96788607\n",
-            " 6.5522617  3.61034864 5.32534486 5.87341535 3.57242752 3.46416886\n",
-            " 4.94128848 4.28990592 5.0148234  6.40684975 3.21115908 5.06429193\n",
-            " 5.16026156 3.8372818  5.43515473 5.35632491 5.27884262 5.16763373\n",
-            " 5.33725392 5.91415269 2.69819298 5.50223844]\n",
+            "[3.98930842 5.85916971 5.42629056 6.60784432 5.06485047 3.9770833\n",
+            " 4.21614519 4.99950629 5.49350691 5.89603847 5.58895021 5.26202608\n",
+            " 4.96877758 5.93189589 5.6505464  5.64965013 4.55069291 4.77929411\n",
+            " 6.64952181 4.04227115 5.4800664  4.44715031 5.72723735 5.56807905\n",
+            " 4.67635167 4.74773991 2.56586141 4.74231926 4.72540311 3.73813487\n",
+            " 4.98715364 5.19448411 4.81395998 3.94586418 4.40374329 5.6294467\n",
+            " 3.78931129 4.78355886 2.92978735 5.43676335]\n",
             "\n",
             "\n",
             "Full set of data points for Gaussian data:\n",
             "       Score\n",
-            "0   3.947277\n",
-            "1   5.439583\n",
-            "2   5.062406\n",
-            "3   6.139264\n",
-            "4   4.485129\n",
-            "5   5.948248\n",
-            "6   4.860147\n",
-            "7   5.732991\n",
-            "8   5.568973\n",
-            "9   6.757103\n",
-            "10  3.938767\n",
-            "11  5.135935\n",
-            "12  5.656656\n",
-            "13  5.413496\n",
-            "14  6.138764\n",
-            "15  4.140210\n",
-            "16  6.716512\n",
-            "17  5.967886\n",
-            "18  6.552262\n",
-            "19  3.610349\n",
-            "20  5.325345\n",
-            "21  5.873415\n",
-            "22  3.572428\n",
-            "23  3.464169\n",
-            "24  4.941288\n",
-            "25  4.289906\n",
-            "26  5.014823\n",
-            "27  6.406850\n",
-            "28  3.211159\n",
-            "29  5.064292\n",
-            "30  5.160262\n",
-            "31  3.837282\n",
-            "32  5.435155\n",
-            "33  5.356325\n",
-            "34  5.278843\n",
-            "35  5.167634\n",
-            "36  5.337254\n",
-            "37  5.914153\n",
-            "38  2.698193\n",
-            "39  5.502238\n",
+            "0   3.989308\n",
+            "1   5.859170\n",
+            "2   5.426291\n",
+            "3   6.607844\n",
+            "4   5.064850\n",
+            "5   3.977083\n",
+            "6   4.216145\n",
+            "7   4.999506\n",
+            "8   5.493507\n",
+            "9   5.896038\n",
+            "10  5.588950\n",
+            "11  5.262026\n",
+            "12  4.968778\n",
+            "13  5.931896\n",
+            "14  5.650546\n",
+            "15  5.649650\n",
+            "16  4.550693\n",
+            "17  4.779294\n",
+            "18  6.649522\n",
+            "19  4.042271\n",
+            "20  5.480066\n",
+            "21  4.447150\n",
+            "22  5.727237\n",
+            "23  5.568079\n",
+            "24  4.676352\n",
+            "25  4.747740\n",
+            "26  2.565861\n",
+            "27  4.742319\n",
+            "28  4.725403\n",
+            "29  3.738135\n",
+            "30  4.987154\n",
+            "31  5.194484\n",
+            "32  4.813960\n",
+            "33  3.945864\n",
+            "34  4.403743\n",
+            "35  5.629447\n",
+            "36  3.789311\n",
+            "37  4.783559\n",
+            "38  2.929787\n",
+            "39  5.436763\n",
             "\n",
             "\n",
-            "Shapiro-Wilk Test Statistic: 0.958\n",
-            "p-value: 0.14297640974425602\n",
+            "Shapiro-Wilk Test Statistic: 0.971\n",
+            "p-value: 0.3856347558962725\n",
             "Sample looks Gaussian (fail to reject H0)\n"
           ]
         }
@@ -111,13 +111,13 @@
         "print(data_gaussian)\n",
         "print('\\n')\n",
         "\n",
-        "df1 = pd.DataFrame(data_gaussian, columns=['Score'])\n",
+        "df = pd.DataFrame(data_gaussian, columns=['Score'])\n",
         "print('Full set of data points for Gaussian data:')\n",
-        "print(df1)\n",
+        "print(df)\n",
         "print('\\n')\n",
         "\n",
         "\n",
-        "df1.to_csv('/content/game_skills.csv', index=True)\n",
+        "df.to_csv('/content/game_skills.csv', index=True)\n",
         "\n",
         "\n",
         "statistic, p_value = shapiro(data_gaussian)\n",
@@ -141,7 +141,7 @@
     {
       "cell_type": "code",
       "source": [
-        "!git clone '/content/game_skills.csv'"
+        "!git clone 'https://github.com/woo-0622/-2025'"
       ],
       "metadata": {
         "colab": {
